--- a/SpringMybatisProject/src/main/webapp/WEB-INF/web.xml
+++ b/SpringMybatisProject/src/main/webapp/WEB-INF/web.xml
@@ -29,7 +29,8 @@
   			classpath:spring-main.xml
   			classpath:spring-employee.xml
   			classpath:spring-member.xml
-  			
+  			classpath:spring-mail-config.xml
+  			classpath:spring-goods.xml
   		</param-value>
   	</init-param>
   </servlet>
