--- a/SpringMybatisProject/src/main/webapp/WEB-INF/web.xml
+++ b/SpringMybatisProject/src/main/webapp/WEB-INF/web.xml
@@ -31,6 +31,8 @@
   			classpath:spring-member.xml
   			classpath:spring-mail-config.xml
   			classpath:spring-goods.xml
+  			classpath:spring-cart.xml
+  			
   		</param-value>
   	</init-param>
   </servlet>
